Add bilingual FAQ with updated questions

--- a/index.html
+++ b/index.html
@@ -693,58 +693,170 @@
     <!-- FAQ Section -->
     <section class="faq-section" id="faq">
         <div class="lang-en">
-            <h2>Frequently Asked Questions</h2>
+            <h2>💬Frequently Asked Questions</h2>
             <div class="faq-item">
                 <div class="faq-question">
-                    <i class="fas fa-child"></i>
-                    <span>Are children welcome at the wedding?</span>
+                    <span>🏨 1. Do I need to stay at Emporio Cancun?</span>
                 </div>
-                <p>While we love your little ones, this will be an adults-only celebration. We appreciate you making
-                    arrangements so you can celebrate with us!</p>
+                <p><strong>No!</strong> While we would love to have everyone staying together at Emporio Cancun,
+                    we completely understand if you'd prefer to stay elsewhere.
+                    🚐 Transportation to and from the wedding venue will be provided.
+                    If you stay somewhere else, please just be mindful of your own transportation needs outside of the
+                    scheduled events.</p>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <i class="fas fa-shoe-prints"></i>
-                    <span>What should I wear for the beach ceremony?</span>
+                    <span>👶 2. Are kids welcome?</span>
                 </div>
-                <p>Please choose footwear appropriate for sand - wedges, block heels, or sandals are perfect. Stilettos
-                    will sink! The dress code is formal beach attire.</p>
+                <p>We love your little ones! 💕 However, the ceremony and reception will be an <strong>adults-only
+                        event. </strong>
+                    Emporio Cancun is a family-friendly, all-inclusive resort, and children are more than welcome at the
+                    <strong> Thursday Icebreaker 🎉. </strong>
+                    Babysitting services are available at the hotel for an additional fee.
+                    If you need help with childcare arrangements, please reach out to us.
+                </p>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <i class="fas fa-umbrella-beach"></i>
-                    <span>What's the weather typically like in March?</span>
+                    <span>👗 3. What should I wear?</span>
                 </div>
-                <p>March is ideal in Cancún with average highs of 82°F (28°C) and lows of 70°F (21°C). Evenings can be
-                    breezy, so bring a light wrap.</p>
+                <p>Our ceremony and reception will take place <strong>under a palapa</strong>—a <strong>covered,
+                        open-air space</strong> by the beach 🌴. We’ll also be <strong>dancing under the stars in the
+                        sand</strong>! ✨ Please dress in <strong>Beach Formal Attire</strong>—think breathable fabrics,
+                    summer suits, cocktail dresses, or elegant beachwear.</p>
+                <ul>
+                    <li>🎨 <strong>Suggested Fabrics & Colors:</strong> Linen, cotton, chiffon, or silk. Soft tones,
+                        tropical colors, or elegant prints. Please avoid white or ivory.</li>
+                    <li>👡 <strong>Footwear & Accessories:</strong> Dressy sandals, wedges, or loafers. Consider
+                        bringing a light jacket, shawl, or wrap for the evening breeze 🌬️.</li>
+                    <li>🤵 <strong>Men’s Attire:</strong> Summer suit, guayabera, or dress shirt with a light jacket. <a
+                            href="https://www.pinterest.com/ideas/men%E2%80%99s-beach-formal/896246643791/"
+                            target="_blank">Men’s Style Inspiration</a>.</li>
+                    <li>👗 <strong>Women’s Attire:</strong> Cocktail, midi, or maxi dresses in breathable fabrics. <a
+                            href="https://www.pinterest.com/ideas/formal-beach-wedding-attire-guest-women/924788971948/"
+                            target="_blank">Women’s Style Inspiration</a>.</li>
+                </ul>
+            </div>
+            <div class="faq-item">
+                <div class="faq-question">
+                    <span>➕ 4. Can I bring a plus one?</span>
+                </div>
+                <p>Please check your RSVP page to see if a plus one is included with your invitation. If not, and you’d
+                    like to bring someone, please reach out to us before confirming.</p>
+            </div>
+            <div class="faq-item">
+                <div class="faq-question">
+                    <span>☀️ 5. What’s the weather typically like in March?</span>
+                </div>
+                <p>March is <strong>ideal</strong> in Cancún with <strong>average highs of 82°F (28°C)</strong> and
+                    <strong>lows of 70°F (21°C)</strong> 🌴☀️. Evenings can be breezy, so we recommend bringing a
+                    <strong>light jacket or wrap</strong> to stay comfortable at night.
+                </p>
+            </div>
+            <div class="faq-item">
+                <div class="faq-question">
+                    <span>🧑‍🤝‍🧑 6. I’m single or traveling solo, where can I meet others?</span>
+                </div>
+                <p>Great question! We know many of you are traveling solo or meeting new people for the first time.
+                    Feeling adventurous? 🎉 Share your <strong>Instagram profile</strong> below in the comments so
+                    others can connect with you before the big day!<br>
+                    <em>While we can’t officially embed profiles here, you can drop your <strong>@handle</strong> to
+                        connect with fellow guests.</em> 👉 Example: <strong>@yourusername</strong>
+                </p>
+            </div>
+            <div class="faq-item">
+                <div class="faq-question">
+                    <span>🎁 7. What about gifts?</span>
+                </div>
+                <p>Your presence is the greatest gift we could ask for.<br>
+                    If you would like to give something extra, <strong>see below for our wedding registry!</strong> ⬇️⬇️
+                </p>
             </div>
         </div>
         <div class="lang-es hidden">
             <!-- Spanish version of FAQs -->
-            <h2>Preguntas Frecuentes</h2>
+            <h2>💬Preguntas Frecuentes</h2>
             <div class="faq-item">
                 <div class="faq-question">
-                    <i class="fas fa-child"></i>
-                    <span>¿Pueden asistir niños a la boda?</span>
+                    <span>🏨 1. ¿Tengo que hospedarme en el Emporio Cancún?</span>
                 </div>
-                <p>Amamos a los más pequeños, pero esta será una celebración solo para adultos. Agradecemos que hagan
-                    los arreglos necesarios para que puedan acompañarnos.</p>
+                <p><strong>No!</strong> Nos encantaría que todos se quedaran juntos en el Emporio Cancún, pero
+                    entendemos si prefieren hospedarse en otro lugar. 🚐 Habrá transporte al y desde la boda. Si deciden
+                    quedarse en otro hotel, solo les pedimos que se organicen con su transporte fuera de los eventos
+                    programados.</p>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <i class="fas fa-shoe-prints"></i>
-                    <span>¿Qué debo usar para la ceremonia en la playa?</span>
+                    <span>👶 2. ¿Pueden ir niños?</span>
                 </div>
-                <p>Recomendamos calzado adecuado para la arena — sandalias, tacones anchos o cuñas están perfectos.
-                    ¡Evita los stilettos! El código de vestimenta es elegante playero.</p>
+                <p>
+                    ¡Amamos a sus pequeños! 💕 Sin embargo, la ceremonia y la recepción serán solo para adultos. El
+                    Emporio Cancún es un hotel familiar y <strong>los niños son bienvenidos en el evento del
+                        jueves</strong> 🎉. El hotel ofrece servicios de niñera con costo adicional. Si necesitan ayuda
+                    para organizar el cuidado de los niños, ¡contáctenos!</p>
+                </p>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <i class="fas fa-umbrella-beach"></i>
-                    <span>¿Cómo es el clima en marzo?</span>
+                    <span>👗 3. ¿Qué debo vestir?</span>
                 </div>
-                <p>Marzo es ideal en Cancún, con temperaturas promedio de 28°C durante el día y 21°C por la noche. Las
-                    noches pueden ser frescas, así que lleva un suéter ligero.</p>
+                <p>
+                    Nuestra ceremonia y recepción serán <strong>bajo una palapa</strong>, un <strong>espacio techado
+                        pero al aire libre</strong>, junto a la playa 🌴. ¡También estaremos <strong>bailando bajo las
+                        estrellas en la arena</strong>! ✨ Sugerimos un <strong>Código de Vestimenta Formal de
+                        Playa</strong>.</p>
+
+                <ul>
+                    <li>🎨 <strong>Telas y Colores Sugeridos:</strong> Lino, algodón, gasa o seda. Tonos suaves, colores
+                        tropicales o estampados elegantes. Evitar blanco o marfil.</li>
+                    <li>👡 <strong>Zapatos y Accesorios:</strong> Sandalias elegantes, plataformas o mocasines. Traer
+                        una chaqueta ligera, chal o pashmina 🌬️.</li>
+                    <li>🤵 <strong>Vestimenta para Hombres:</strong> Traje de verano, guayabera o camisa con saco
+                        ligero. <a href="https://www.pinterest.com/ideas/men%E2%80%99s-beach-formal/896246643791/"
+                            target="_blank">Inspiración para Hombres</a>.</li>
+                    <li>👗 <strong>Vestimenta para Mujeres:</strong> Vestidos de cóctel, midi o largos en telas frescas.
+                        <a href="https://www.pinterest.com/ideas/formal-beach-wedding-attire-guest-women/924788971948/"
+                            target="_blank">Inspiración para Mujeres</a>.
+                    </li>
+                </ul>
+
+            </div>
+            <div class="faq-item">
+                <div class="faq-question">
+                    <span>➕ 4. ¿Puedo llevar acompañante?</span>
+                </div>
+                <p>Por favor revisa tu página de confirmación para ver si tu invitación incluye un acompañante. Si no es
+                    así y te gustaría llevar a alguien, por favor contáctanos antes de confirmar.</p>
+                </p>
+            </div>
+            <div class="faq-item">
+                <div class="faq-question">
+                    <span>☀️ 5. ¿Cómo es el clima en marzo?</span>
+                </div>
+                <p>Marzo es <strong>ideal</strong> en Cancún, con <strong>temperaturas promedio de 28°C (82°F) durante
+                        el día</strong> y <strong>21°C (70°F) por la noche</strong> 🌴☀️. Las noches pueden ser frescas
+                    por la brisa, así que les recomendamos traer una <strong>chaqueta ligera o un chal</strong>.
+                </p>
+            </div>
+            <div class="faq-item">
+                <div class="faq-question">
+                    <span>🧑‍🤝‍🧑 6. Viajo solo/a, ¿dónde puedo conocer a otros invitados?</span>
+                </div>
+                <p>¡Gran pregunta! Sabemos que muchos viajan solos o conocerán gente nueva por primera vez. ¿Te animas?
+                    🎉 Comparte tu <strong>perfil de Instagram</strong> abajo en los comentarios para que otros puedan
+                    conectarse contigo antes del gran día.<br>
+                    <em>No podemos mostrar perfiles directamente aquí, pero puedes dejar tu <strong>@usuario</strong>
+                        para conectarte con otros invitados.</em> 👉 Ejemplo: <strong>@tusunombredeusuario</strong>
+                </p>
+            </div>
+            <div class="faq-item">
+                <div class="faq-question">
+                    <span>🎁 7. ¿Qué pasa con los regalos?</span>
+                </div>
+                <p>Su presencia es el mejor regalo que podemos recibir.<br>
+                    Si desean hacernos un obsequio adicional, <strong>vean abajo nuestra mesa de regalos.</strong> ⬇️⬇️
+                </p>
+
             </div>
         </div>
     </section>
