quick change to text

--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
     <!-- FAQ Section -->
     <section class="faq-section" id="faq">
         <div class="lang-en">
-            <h2>💬Frequently Asked Questions</h2>
+            <h2>💬 Frequently Asked Questions 💬</h2>
             <div class="faq-item">
                 <div class="faq-question">
                     <span>🏨 1. Do I need to stay at Emporio Cancun?</span>
@@ -870,8 +870,8 @@
     </div>
     <div class="leaf-divider"></div>
     <section class="location" id="registry">
-        <h2 class="lang-en">Our Registry</h2>
-        <h2 class="lang-es hidden">Nuestra Mesa de Regalos</h2>
+        <h2 class="lang-en" style="text-align:center;">Our Registry</h2>
+        <h2 class="lang-es hidden" style="text-align:center;">Nuestra Mesa de Regalos</h2>
 
         <p class="lang-en">
             Your presence at our wedding is the greatest gift we could ask for.
