update language in sections

--- a/index.html
+++ b/index.html
@@ -324,8 +324,12 @@
                     <h4><i class="fas fa-shuttle-van"></i> Hotel Shuttle</h4>
                     <p>Shuttles to Emporio are available for groups of up to 15. It's ~30-65 USD each way (make sure to
                         reserve in
-                        advance!) -- <a
-                            href="https://etransfers.com/transportation-to-hotel-emporio-cancun">eTransfers</a>
+                        advance!), e.g.
+                        <a href="https://etransfers.com/transportation-to-hotel-emporio-cancun">eTransfers</a>,
+                        <a href="https://happyshuttlecancun.com/cancun-airport-shuttle-to-hotel-zone">Happy Shuttle</a>,
+                        <a
+                            href="https://caribbean-transfers.com/cancun/transportation-to-hotel-emporio-cancun-optional-all-inclusive">Caribbean
+                            Transfers</a>
                     </p>
                 </div>
                 <div class="transport-card">
@@ -404,7 +408,8 @@
                     <div class="icon">👨‍👩‍👧‍👦</div>
                     <div class="content">
                         <div class="time">Wednesday</div>
-                        <div class="info">Family arrives and settles in<br><small>If you're in town early, we'd love to
+                        <div class="info">Family arrives and settles in to Emporio Cancún<br><small>If you're in town
+                                early, we'd love to
                                 see you — but Wednesday is for family.</small></div>
                     </div>
                 </div>
@@ -413,7 +418,7 @@
                     <div class="icon">🍹</div>
                     <div class="content">
                         <div class="time">Thursday (Sunset)</div>
-                        <div class="info">Icebreaker at the hotel: drinks, canapés, and mingling</div>
+                        <div class="info">Icebreaker at the hotel: drinks, canapés, and mingling for all guests!</div>
                     </div>
                 </div>
 
@@ -421,7 +426,9 @@
                     <div class="icon">🧘‍♀️</div>
                     <div class="content">
                         <div class="time">Friday</div>
-                        <div class="info">Free day to relax and explore<br><small>Don’t go too hard — Saturday is the
+                        <div class="info">Free day to relax and <a href="#activities">explore the
+                                area</a><br><small>Don’t go too
+                                hard — Saturday is the
                                 main event!</small></div>
                     </div>
                 </div>
@@ -430,7 +437,7 @@
                     <div class="icon">🚐</div>
                     <div class="content">
                         <div class="time">5:00 PM Saturday</div>
-                        <div class="info">Shuttles depart from Emporio</div>
+                        <div class="info">Shuttles depart from Emporio to Jardín del Mar</div>
                     </div>
                 </div>
 
@@ -438,7 +445,7 @@
                     <div class="icon">💍</div>
                     <div class="content">
                         <div class="time">6:00 PM</div>
-                        <div class="info">Wedding Ceremony</div>
+                        <div class="info">Wedding Ceremony in the Jardín del Mar Chapel </div>
                     </div>
                 </div>
 
@@ -470,7 +477,7 @@
                     <div class="icon">🚌</div>
                     <div class="content">
                         <div class="time">11:30 PM</div>
-                        <div class="info">First shuttle returns to hotel</div>
+                        <div class="info">First shuttle returns from the reception to our hotel</div>
                     </div>
                 </div>
 
@@ -486,7 +493,7 @@
                     <div class="icon">🚌</div>
                     <div class="content">
                         <div class="time">2:00 AM</div>
-                        <div class="info">Last shuttle to hotel</div>
+                        <div class="info">Last shuttle from reception to hotel</div>
                     </div>
                 </div>
             </div>
@@ -517,7 +524,8 @@
                     <div class="icon">🧘‍♀️</div>
                     <div class="content">
                         <div class="time">Viernes</div>
-                        <div class="info">Día libre para descansar o explorar<br><small>¡Pero no se excedan! El sábado
+                        <div class="info">Día libre para descansar o <a href="#activites">explorar</a><br><small>¡Pero
+                                no se excedan! El sábado
                                 se baila fuerte.</small></div>
                     </div>
                 </div>
@@ -693,7 +701,7 @@
     <!-- FAQ Section -->
     <section class="faq-section" id="faq">
         <div class="lang-en">
-            <h2>💬 Frequently Asked Questions 💬</h2>
+            <h2>💬Frequently Asked Questions</h2>
             <div class="faq-item">
                 <div class="faq-question">
                     <span>🏨 1. Do I need to stay at Emporio Cancun?</span>
