--- a/index.html
+++ b/index.html
@@ -400,6 +400,91 @@
     <div class="leaf-divider"></div>
     <!-- Timeline Section -->
     <section id="timeline">
+        <!-- Add to Calendar Button with Icon -->
+        <!-- TODO: This should center on smaller screens -->
+        <button id="addToCalendarBtn"
+            style="font-size: 1rem; float:right; padding: 1rem 2rem; border: none; border-radius: 8px; background-color: var(--color4); color: white; cursor: pointer;">
+            <i class="fa-solid fa-calendar-plus"></i>
+            <div class="lang-en">Subscribe to Calendar</div>
+            <div class="lang-es hidden">Agregar al Calendario</div>
+        </button>
+        <!-- Modal Structure -->
+        <div id="calendarModal"
+            style="display:none; z-index:100; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5);">
+            <div style="background:white; max-width:500px; margin:10% auto; padding:20px; border-radius:8px;">
+                <h2 class="lang-en">Add to Calendar</h2>
+                <h2 class="lang-es">Agregar al Calendario</h2>
+
+                <!-- Apple Section -->
+                <h3 class="lang-en">Apple Calendar</h3>
+                <h3 class="lang-es">Calendario de Apple</h3>
+                <p class="lang-en">Click below to add directly to Apple Calendar.</p>
+                <p class="lang-es">Haz clic abajo para agregarlo directamente al Calendario de Apple.</p>
+                <a href="https://yourwebsite.com/calendar.ics" style="display:inline-block; margin-bottom:1rem;"
+                    class="lang-en">
+                    Add to Apple Calendar
+                </a>
+                <a href="https://yourwebsite.com/calendar.ics" style="display:inline-block; margin-bottom:1rem;"
+                    class="lang-es">
+                    Agregar al Calendario de Apple
+                </a>
+
+                <!-- Google Section -->
+                <h3 class="lang-en">Google Calendar</h3>
+                <h3 class="lang-es">Calendario de Google</h3>
+                <p class="lang-en">Follow these steps on a computer:</p>
+                <p class="lang-es">Sigue estos pasos en una computadora:</p>
+                <ol>
+                    <li class="lang-en">Open <a href="https://calendar.google.com" target="_blank">Google Calendar</a>
+                    </li>
+                    <li class="lang-es">Abre <a href="https://calendar.google.com" target="_blank">Google Calendar</a>
+                    </li>
+
+                    <li class="lang-en">Click “+” next to Other calendars</li>
+                    <li class="lang-es">Haz clic en “+” junto a Otros calendarios</li>
+
+                    <li class="lang-en">Select “From URL”</li>
+                    <li class="lang-es">Selecciona “Desde URL”</li>
+
+                    <li class="lang-en">Paste: <code>https://yourwebsite.com/gcal.ics</code></li>
+                    <li class="lang-es">Pega: <code>https://yourwebsite.com/gcal.ics</code></li>
+
+                    <li class="lang-en">Click Add Calendar</li>
+                    <li class="lang-es">Haz clic en Agregar calendario</li>
+                </ol>
+                <p class="lang-en">Events will appear in your Google Calendar and on your phone's calendar app.</p>
+                <p class="lang-es">Los eventos aparecerán en tu Google Calendar y en la app de calendario de tu
+                    teléfono.</p>
+
+                <!-- Close Button -->
+                <button id="closeModal"
+                    style="margin-top:1rem; padding:0.5rem 1rem; border:none; border-radius:5px; background:#ccc;"
+                    class="lang-en">
+                    Close
+                </button>
+                <button id="closeModal"
+                    style="margin-top:1rem; padding:0.5rem 1rem; border:none; border-radius:5px; background:#ccc;"
+                    class="lang-es">
+                    Cerrar
+                </button>
+            </div>
+        </div>
+
+        <script>
+            // Attach click handler to all Add to Calendar buttons
+            document.querySelectorAll('#addToCalendarBtn').forEach(function (button) {
+                button.onclick = function () {
+                    document.getElementById('calendarModal').style.display = 'block';
+                };
+            });
+
+            // Attach click handler to all Close buttons
+            document.querySelectorAll('#closeModal').forEach(function (button) {
+                button.onclick = function () {
+                    document.getElementById('calendarModal').style.display = 'none';
+                };
+            });
+        </script>
         <!-- English Timeline -->
         <div class="lang-en">
             <h2 class="timeline-header">Wedding Weekend Schedule</h2>
