--- a/index.html
+++ b/index.html
@@ -420,12 +420,10 @@
                 <h3 class="lang-es">Calendario de Apple</h3>
                 <p class="lang-en">Click below to add directly to Apple Calendar.</p>
                 <p class="lang-es">Haz clic abajo para agregarlo directamente al Calendario de Apple.</p>
-                <a href="https://yourwebsite.com/calendar.ics" style="display:inline-block; margin-bottom:1rem;"
-                    class="lang-en">
+                <a href="/gcal.ics" style="display:inline-block; margin-bottom:1rem;" class="lang-en">
                     Add to Apple Calendar
                 </a>
-                <a href="https://yourwebsite.com/calendar.ics" style="display:inline-block; margin-bottom:1rem;"
-                    class="lang-es">
+                <a href="/gcal.ics" style="display:inline-block; margin-bottom:1rem;" class="lang-es">
                     Agregar al Calendario de Apple
                 </a>
 
@@ -446,8 +444,8 @@
                     <li class="lang-en">Select “From URL”</li>
                     <li class="lang-es">Selecciona “Desde URL”</li>
 
-                    <li class="lang-en">Paste: <code>https://yourwebsite.com/gcal.ics</code></li>
-                    <li class="lang-es">Pega: <code>https://yourwebsite.com/gcal.ics</code></li>
+                    <li class="lang-en">Paste: <code>https://bety.lucasdurand.xyz/gcal.ics</code></li>
+                    <li class="lang-es">Pega: <code>https://bety.lucasdurand.xyz/gcal.ics</code></li>
 
                     <li class="lang-en">Click Add Calendar</li>
                     <li class="lang-es">Haz clic en Agregar calendario</li>
