--- a/index.html
+++ b/index.html
@@ -895,6 +895,9 @@
         <section class="location lang-en" style="font-size:xx-large;">👇 Action
             Items 👇
         </section>
+        <section class="location lang-es" style="font-size:xx-large;">👇 Acciones a realizar 👇
+        </section>
+
         <a class="rsvp-btn lang-en" href="https://withjoy.com/bety-and-lucas/rsvp"><i
                 class="fa-solid fa-calendar-plus"></i> RSVP Now <i class="fa-solid fa-calendar-check"></i></a>
         <div class="rsvp-block lang-en">
