integrate add to calendar button into timeline

--- a/index.html
+++ b/index.html
@@ -401,26 +401,17 @@
     <div class="leaf-divider"></div>
     <!-- Timeline Section -->
     <section id="timeline">
-        <div style="float:right;" class="lang-es">
-            <add-to-calendar-button name="Bety y Lucas: la boda!" startDate="2026-03-04" endDate="2026-03-07"
-                timeZone="America/Cancun" location="Cancun, Mexico"
-                icsFile="https://calendar.google.com/calendar/ical/d7247e5844f86f17d80cb5fcbd86635beaf14e685ca690f9134023203dcdddad%40group.calendar.google.com/public/basic.ics"
-                availability="busy" subscribe iCalFileName="Test"
-                options="'Apple','Google','iCal','Outlook.com','Yahoo'" buttonStyle="round" hideIconModal size="4"
-                language="es"></add-to-calendar-button>
-        </div>
-        <div style="float:right;" class="lang-en">
-            <add-to-calendar-button name="Bety + Lucas Get Married" startDate="2026-03-04" endDate="2026-03-07"
-                timeZone="America/Cancun" location="Cancun, Mexico"
-                icsFile="https://calendar.google.com/calendar/ical/d7247e5844f86f17d80cb5fcbd86635beaf14e685ca690f9134023203dcdddad%40group.calendar.google.com/public/basic.ics"
-                availability="busy" subscribe iCalFileName="Test"
-                options="'Apple','Google','iCal','Outlook.com','Yahoo'" buttonStyle="round" hideIconModal size="4"
-                language="en"></add-to-calendar-button>
-        </div>
-
         <!-- English Timeline -->
         <div class="lang-en">
             <h2 class="timeline-header">Wedding Weekend Schedule</h2>
+            <div class="timeline-bookend lang-en">
+                <add-to-calendar-button name="Bety + Lucas Get Married" startDate="2026-03-04" endDate="2026-03-07"
+                    timeZone="America/Cancun" location="Cancun, Mexico"
+                    icsFile="https://calendar.google.com/calendar/ical/d7247e5844f86f17d80cb5fcbd86635beaf14e685ca690f9134023203dcdddad%40group.calendar.google.com/public/basic.ics"
+                    availability="busy" subscribe iCalFileName="Test"
+                    options="'Apple','Google','iCal','Outlook.com','Yahoo'" buttonStyle="round" hideIconModal size="4"
+                    language="en"></add-to-calendar-button>
+            </div>
             <div class="timeline-elegant">
                 <div class="timeline-event">
                     <div class="icon">👨‍👩‍👧‍👦</div>
@@ -517,11 +508,29 @@
                     </div>
                 </div>
             </div>
+            <div class="timeline-bookend lang-en">
+                <add-to-calendar-button name="Bety + Lucas Get Married" startDate="2026-03-04" endDate="2026-03-07"
+                    timeZone="America/Cancun" location="Cancun, Mexico"
+                    icsFile="https://calendar.google.com/calendar/ical/d7247e5844f86f17d80cb5fcbd86635beaf14e685ca690f9134023203dcdddad%40group.calendar.google.com/public/basic.ics"
+                    availability="busy" subscribe iCalFileName="Test"
+                    options="'Apple','Google','iCal','Outlook.com','Yahoo'" buttonStyle="round" hideIconModal size="4"
+                    language="en"></add-to-calendar-button>
+            </div>
+
         </div>
 
         <!-- Spanish Timeline -->
         <div class="lang-es hidden">
             <h2 class="timeline-header">Programa del Fin de Semana</h2>
+            <div class="timeline-bookend lang-es">
+                <add-to-calendar-button name="Bety y Lucas: la boda!" startDate="2026-03-04" endDate="2026-03-07"
+                    timeZone="America/Cancun" location="Cancun, Mexico"
+                    icsFile="https://calendar.google.com/calendar/ical/d7247e5844f86f17d80cb5fcbd86635beaf14e685ca690f9134023203dcdddad%40group.calendar.google.com/public/basic.ics"
+                    availability="busy" subscribe iCalFileName="Test"
+                    options="'Apple','Google','iCal','Outlook.com','Yahoo'" buttonStyle="round" hideIconModal size="4"
+                    language="es"></add-to-calendar-button>
+            </div>
+
             <div class="timeline-elegant">
                 <div class="timeline-event">
                     <div class="icon">👨‍👩‍👧‍👦</div>
@@ -615,6 +624,15 @@
                     </div>
                 </div>
             </div>
+            <div class="timeline-bookend lang-es">
+                <add-to-calendar-button name="Bety y Lucas: la boda!" startDate="2026-03-04" endDate="2026-03-07"
+                    timeZone="America/Cancun" location="Cancun, Mexico"
+                    icsFile="https://calendar.google.com/calendar/ical/d7247e5844f86f17d80cb5fcbd86635beaf14e685ca690f9134023203dcdddad%40group.calendar.google.com/public/basic.ics"
+                    availability="busy" subscribe iCalFileName="Test"
+                    options="'Apple','Google','iCal','Outlook.com','Yahoo'" buttonStyle="round" hideIconModal size="4"
+                    language="es"></add-to-calendar-button>
+            </div>
+
         </div>
 
     </section>
