--- a/index.html
+++ b/index.html
@@ -25,6 +25,40 @@
 </head>
 
 <body>
+    <div id="greeting" style="display: none;">
+        <div class="announcement">
+            <button onclick="dismissGreeting()" class="dismiss">x
+            </button>
+            <div class="lang-en">
+                <h2>Welcome to Our Wedding Website!</h2>
+                <p>We're so excited to share this special time with you.</p>
+                <p>We built this website ourselves, from scratch, with love and care—just for you! Here you'll find all
+                    the
+                    details you need to celebrate with us, and maybe even a few surprises along the way.</p>
+                <p>Take a look around, and thank you for being part of our story. ❤️</p>
+            </div>
+            <div class="lang-es">
+                <h2>¡Bienvenidos a Nuestro Sitio de Boda!</h2>
+                <p>Estamos muy emocionados de compartir este momento tan especial con ustedes.</p>
+                <p>Construimos este sitio nosotros mismos, desde cero, con mucho cariño y dedicación—¡pensando en
+                    ustedes! Aquí encontrarán toda la información que necesitan para celebrar con nosotros, y quizás
+                    hasta algunas sorpresas en el camino.</p>
+                <p>Denle una vuelta, y gracias por ser parte de nuestra historia. ❤️</p>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        if (!localStorage.getItem('greetingDismissed')) {
+            document.getElementById('greeting').style.display = 'block';
+        }
+
+        function dismissGreeting() {
+            localStorage.setItem('greetingDismissed', 'true');
+            document.getElementById('greeting').style.display = 'none';
+        }
+    </script>
+
     <nav class="mobile-icon-nav">
         <ul>
             <li><a href="#header" title="Home"><i class="fas fa-home"></i></a></li>
@@ -113,19 +147,22 @@
 
         <div class="lang-en">
             <h2>About Us</h2>
-            <p>From the hospital halls to the rhythm of jazz — Beatriz and Lucas might seem like an unlikely pair, but
+            <p>From the hospital halls to the rhythm of jazz — Beatriz and Lucas might seem like an unlikely pair,
+                but
                 their story has always danced to its own beat.</p>
             <div class="about-cards">
                 <div class="about-card">
                     <img src="assets/photos/bety-doctor.jpg" alt="Bety at work" />
                     <h3>Beatriz</h3>
-                    <p>A dedicated doctor with a heart of gold (and nerves of steel). Beatriz is the calm in the storm,
+                    <p>A dedicated doctor with a heart of gold (and nerves of steel). Beatriz is the calm in the
+                        storm,
                         the first one to show up, and the last one dancing.</p>
                 </div>
                 <div class="about-card">
                     <img src="assets/photos/lucas-sax.jpg" alt="Lucas playing saxophone" />
                     <h3>Lucas</h3>
-                    <p>A saxophone wizard with a love for late-night jams and a good mezcal. Lucas brings the groove,
+                    <p>A saxophone wizard with a love for late-night jams and a good mezcal. Lucas brings the
+                        groove,
                         the jokes, and just enough chaos to keep things fun.</p>
                 </div>
             </div>
@@ -133,19 +170,22 @@
 
         <div class="lang-es hidden">
             <h2>Sobre los Novios</h2>
-            <p>Desde los pasillos del hospital hasta los escenarios de jazz — Beatriz y Lucas pueden parecer opuestos,
+            <p>Desde los pasillos del hospital hasta los escenarios de jazz — Beatriz y Lucas pueden parecer
+                opuestos,
                 pero su historia siempre ha seguido su propio ritmo.</p>
             <div class="about-cards">
                 <div class="about-card">
                     <img src="assets/photos/bety-doctor.jpg" alt="Bety trabajando" />
                     <h3>Beatriz</h3>
-                    <p>Una doctora dedicada con un corazón de oro (y nervios de acero). Beatriz es calma en el caos, la
+                    <p>Una doctora dedicada con un corazón de oro (y nervios de acero). Beatriz es calma en el caos,
+                        la
                         primera en llegar y la última en dejar de bailar.</p>
                 </div>
                 <div class="about-card">
                     <img src="assets/photos/lucas-sax.jpg" alt="Lucas tocando sax" />
                     <h3>Lucas</h3>
-                    <p>Un dios del saxofón con pasión por las improvisaciones nocturnas y un buen mezcal. Lucas pone el
+                    <p>Un dios del saxofón con pasión por las improvisaciones nocturnas y un buen mezcal. Lucas pone
+                        el
                         ritmo, las risas y un toque de locura divertida.</p>
                 </div>
             </div>
@@ -195,10 +235,12 @@
             <div class="pair-left text-backdrop">
                 <div class="lang-en">
                     <h2>Our Celebration</h2>
-                    <p>Join us for a magical beachfront celebration at Jardin del Mar in Cancún. We'll exchange vows as
+                    <p>Join us for a magical beachfront celebration at Jardin del Mar in Cancún. We'll exchange vows
+                        as
                         the
                         sun
-                        sets over the Caribbean, followed by cocktails, dinner with live saxophone music, and dancing
+                        sets over the Caribbean, followed by cocktails, dinner with live saxophone music, and
+                        dancing
                         under
                         the
                         stars.</p>
@@ -206,8 +248,10 @@
                 </div>
                 <div class="lang-es hidden">
                     <h2>Nuestra Celebración</h2>
-                    <p>Acompáñanos en una celebración mágica frente al mar en Jardín del Mar en Cancún. Intercambiaremos
-                        nuestros votos mientras el sol se pone sobre el Caribe, seguido de cócteles, cena con música de
+                    <p>Acompáñanos en una celebración mágica frente al mar en Jardín del Mar en Cancún.
+                        Intercambiaremos
+                        nuestros votos mientras el sol se pone sobre el Caribe, seguido de cócteles, cena con música
+                        de
                         saxofón
                         en vivo y baile bajo las estrellas.</p>
                     <p>¡La noche culminará con mariachis y tacos a las 2am - una verdadera fiesta mexicana!</p>
@@ -292,11 +336,13 @@
                             experience.</strong>
                     </p>
                     <p class="lang-es hidden">
-                        🏨 Estaremos en <strong>Emporio Cancún </strong> — ¡nuestro punto de reunión para todo el fin de
+                        🏨 Estaremos en <strong>Emporio Cancún </strong> — ¡nuestro punto de reunión para todo el
+                        fin de
                         semana!
                         🚐 De aquí saldrá el transporte a la boda y
                         🍹 también será la sede del rompehielo el jueves.
-                        <strong>Puedes quedarte en otro lugar, pero te recomendamos Emporio para vivir la experiencia
+                        <strong>Puedes quedarte en otro lugar, pero te recomendamos Emporio para vivir la
+                            experiencia
                             completa.</strong>
                     </p>
                     <p>Room block code: LUCAS-BEATRIZ</p>
@@ -310,7 +356,8 @@
                 <div class="transport-card">
                     <h4><i class="fas fa-plane"></i> Flights</h4>
                     <p>Find your way to Cancún Airport (CUN). If you're coming from Toronto or Veracruz
-                        we are working with a travel agent to schedule group flights. Anyone travelling in these groups
+                        we are working with a travel agent to schedule group flights. Anyone travelling in these
+                        groups
                         will also have shuttles scheduled to bring you right to the hotel.
                     </p>
                 </div>
@@ -323,11 +370,13 @@
                 </div>
                 <div class="transport-card">
                     <h4><i class="fas fa-shuttle-van"></i> Hotel Shuttle</h4>
-                    <p>Shuttles to Emporio are available for groups of up to 15. It's ~30-65 USD each way (make sure to
+                    <p>Shuttles to Emporio are available for groups of up to 15. It's ~30-65 USD each way (make sure
+                        to
                         reserve in
                         advance!), e.g.
                         <a href="https://etransfers.com/transportation-to-hotel-emporio-cancun">eTransfers</a>,
-                        <a href="https://happyshuttlecancun.com/cancun-airport-shuttle-to-hotel-zone">Happy Shuttle</a>,
+                        <a href="https://happyshuttlecancun.com/cancun-airport-shuttle-to-hotel-zone">Happy
+                            Shuttle</a>,
                         <a
                             href="https://caribbean-transfers.com/cancun/transportation-to-hotel-emporio-cancun-optional-all-inclusive">Caribbean
                             Transfers</a>
@@ -346,7 +395,8 @@
                     <div class="hotel-card">
                         <h5>Airbnb/Vrbo</h5>
                         <div class="hotel-distance">Various locations</div>
-                        <p>Many condos available in Hotel Zone -- let us know if you're not planning to stay with us!
+                        <p>Many condos available in Hotel Zone -- let us know if you're not planning to stay with
+                            us!
                         </p>
                     </div>
                 </div>
@@ -366,7 +416,8 @@
                 <div class="transport-card">
                     <h4><i class="fas fa-taxi"></i> Taxi</h4>
                     <p>Los taxis oficiales del aeropuerto cuestan aproximadamente $40 USD para hasta 4 personas.
-                        Tiempo de viaje: ~20 minutos. <strong>No hay servicios de transporte como Uber disponibles en el
+                        Tiempo de viaje: ~20 minutos. <strong>No hay servicios de transporte como Uber disponibles
+                            en el
                             aeropuerto</strong>
                     </p>
                 </div>
@@ -648,7 +699,8 @@
                     <div class="activity-icon"><i class="fas fa-ship"></i></div>
                     <div class="activity-content">
                         <h3>Isla Mujeres</h3>
-                        <p>Take a ferry to Isla Mujeres and enjoy Playa Norte, Punta Sur, snorkeling, and more. It’s a
+                        <p>Take a ferry to Isla Mujeres and enjoy Playa Norte, Punta Sur, snorkeling, and more. It’s
+                            a
                             great
                             day trip from Cancún!</p>
                     </div>
@@ -661,7 +713,8 @@
                     <div class="activity-icon"><i class="fas fa-umbrella-beach"></i></div>
                     <div class="activity-content">
                         <h3>Hotel Zone Beaches</h3>
-                        <p>Relax on the beautiful sandy beaches of Cancún’s Hotel Zone — Playa Delfines and Playa Chac
+                        <p>Relax on the beautiful sandy beaches of Cancún’s Hotel Zone — Playa Delfines and Playa
+                            Chac
                             Mool
                             are guest favorites.</p>
                     </div>
@@ -678,7 +731,8 @@
                     <div class="activity-icon"><i class="fas fa-landmark"></i></div>
                     <div class="activity-content">
                         <h3>Archaeological Sites</h3>
-                        <p>Visit nearby ruins like El Rey in the Hotel Zone, or plan a day trip to Tulum or Chichén Itzá
+                        <p>Visit nearby ruins like El Rey in the Hotel Zone, or plan a day trip to Tulum or Chichén
+                            Itzá
                             for
                             a deeper dive into Mayan history.</p>
                     </div>
