--- a/index.html
+++ b/index.html
@@ -801,9 +801,8 @@
                 </div>
                 <p><strong>No!</strong> While we would love to have everyone staying together at Emporio Cancun,
                     we completely understand if you'd prefer to stay elsewhere.
-                    🚐 Transportation to and from the wedding venue will be provided.
-                    If you stay somewhere else, please just be mindful of your own transportation needs outside of the
-                    scheduled events.</p>
+                    🚐 Transportation to and from the wedding venue and Emporio will be provided.
+                    If you stay somewhere else, please just be mindful of your own transportation needs.</p>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
